# temporal-is-fun

./: .gitignore  Dockerfile.worker  README.md  docker-compose.aws.yml  docker-compose.yml  pyproject.toml
data/: sample_churn.csv
docs/: aws-deployment-with-terraform.md  aws-networking-guide.md
docs/superpowers/plans/: 2026-03-25-aws-deployment-phase2.md  2026-03-25-temporal-ml-pipeline-phase1.md
docs/superpowers/specs/: 2026-03-25-aws-deployment-design.md  2026-03-25-temporal-ml-pipeline-design.md
scripts/: generate_churn_data.py  localstack-init.sh  upload_csv.sh
src/: config.py  s3_client.py  trigger.py
src/models/: churn_model.py
src/workers/: default_worker.py  training_worker.py
src/workflows/: evaluation.py  ingestion.py  parent.py  preprocessing.py  training.py
terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_group.tf  sqs.tf  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
tests/: conftest.py  test_config.py  test_evaluation.py  test_ingestion.py  test_parent_workflow.py  test_preprocessing.py  test_s3_client.py  test_training.py  test_trigger.py
