[project]
name = "temporal-datapipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.1",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3,sqs]>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "moto[s3,sqs]>=5.1.22",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
